syntax = "proto3";
package library;

option go_package = ".;pb";

service BookService {
  rpc GetBook(GetBookRequest) returns (BookResponse) {}
  rpc CreateBook(CreateBookRequest) returns (BookResponse) {}
  rpc UpdateBookStatus(UpdateBookRequest) returns (BookResponse) {}
}

message UpdateBookRequest {
  string book_id =1;
}

message GetBookRequest {
  string book_id = 1;
}

message CreateBookRequest {
  string title = 1;
  string author = 2;
  int32 year = 3;
}

message BookResponse {
  string id = 1;
  string title = 2;
  string author = 3;
  int32 year = 4;
  bool available = 5;
}