syntax = "proto3";
package library;

option go_package = ".;pb";

service NotificationService {
  rpc SendNotification(NotificationRequest) returns (NotificationResponse) {}
}

message NotificationRequest {
  string notification_type = 1;
}

message NotificationResponse {
  bool success = 1;
}